--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^3.2.25",
+    "vue-i18n": "^9.2.0-beta.23",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
